--- a/index.html
+++ b/index.html
@@ -1,16 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" href="/myFavicon.ico" type="image/x-icon" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sean Fuhrman</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--TO-DO: ADD META DESCRIPTION-->
+  <title>Home - Personal Website</title>
+  <link rel="stylesheet" href="global.css" media="screen">
+  <script src="main.js" type="module"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-
 <body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
-</body>
+  <main>
+    <noscript>
+      <p>Sorry, my webepage requires JavaScript to be enabled!</p>
+    </noscript>
+  </main>
+  <template id="homepage-tpl">
+    <section id="homepage">
+      <div id="foreground">
+        <div id="stars">
+          <hr id="top-line">
+          <h1><strong style="font-size: 5rem;">Hi </strong><br> I'm  Sean Fuhrman</h1>
+          <p>
+            I am a <strong>Computer Engineering</strong> major currently 
+            studying at <strong>University of California San Diego</strong>.
+            I'm passionate about artificial intelligence, building fun projects, and learning new things.
+          </p>
+          <section>
+            <a id="resume-button" href="/Resume.pdf">View Resume</a>
+            <button id="view-portfolio-button" type="button">View Portfolio</button>
+          </section>
+          <hr id="bottom-line">
+        </div>
+      </div>
+    </section>
+  </template>
+  <template id="portfolio-tpl">
+    <section id="portfolio">
+      <header>
+        <h2>Portfolio</h2>
+        <button id="back-home-button" type="button">Back Home</button>
+      </header>
+      <div id="slider-counter"></div>
+      <div id="slider">
+        <!-- requires 5 minimum -->
+        <portfolio-item 
+        img="/assets/Falling_Aliens!!!.webp"
+        details = "Created a 2D arcade-style video game using the Unity game engine and Javascript programming language."
+        header = "Falling Aliens!!!"
+        ></portfolio-item>
+        <portfolio-item 
+        img="/assets/Room_Automation.webp"
+        details = "Designed, prototyped, and debugged microcontroller system designed to act as “assistant” via voice commands"
+        header = "Room Automation System"
+        ></portfolio-item>
+        <portfolio-item 
+          img="/assets/LED_Infinity_Mirror.webm"
+          details = "Hand-crafted an LED infinity mirror with an Arduino microcontroller and custom software for different LED patterns."
+          header = "LED Infinity Mirror"
+          github="https://github.com/Sean-Fuhrman/LED-Infinity-Mirror"
+        ></portfolio-item>    
+        <portfolio-item 
+          img="/assets/website_photo.webp"
+          details = "This website is done in pure HTML, CSS, and Javascript. It has gone through many revisions and is still a work in progress."
+          header = "This Website!"
+        ></portfolio-item>
+        <portfolio-item 
+          img="/assets/DS3.png"
+          details = "In-progress: I am working with a team of students at <a href='https://www.ds3ucsd.com/'>DS3</a> to create a Shazam-like data science project that classifies music genre"
+          header = "Data Science Student Society"
+        ></portfolio-item>
 
+      </div>
+      <button id="left-button">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="m14 18l-6-6l6-6l1.4 1.4l-4.6 4.6l4.6 4.6L14 18Z"/>
+        <title>Move Slider Left</title>
+        </svg>
+      </button>
+      <button id="right-button">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M9.4 18L8 16.6l4.6-4.6L8 7.4L9.4 6l6 6l-6 6Z"/>
+        <title>Move Slider Right</title>
+        </svg>
+      </button>
+    </section>
+  </template>
+  <template id="contact-tpl">
+    <section id="contact">
+      <h2>Contact</h2>
+      <!--Resume download and link to contact info-->
+    </section>
+  </template>
+</body>
 </html>
