--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--TO-DO: ADD META DESCRIPTION-->
   <title>Home - Personal Website</title>
-  <link rel="stylesheet" href="global.css" media="screen">
-  <script src="main.js" type="module"></script>
+  <link rel="stylesheet" href="/global.css" media="screen" type="text/css">
+  <script src="/main.js" type="module"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -47,28 +47,29 @@
       <div id="slider">
         <!-- requires 5 minimum -->
         <portfolio-item 
-        img="/assets/Falling_Aliens!!!.webp"
-        details = "Created a 2D arcade-style video game using the Unity game engine and Javascript programming language."
-        header = "Falling Aliens!!!"
+          src="/assets/Falling_Aliens!!!.webp"
+          details = "Created a 2D arcade-style video game using the Unity game engine and Javascript programming language."
+          header = "Falling Aliens!!!"
         ></portfolio-item>
         <portfolio-item 
-        img="/assets/Room_Automation.webp"
-        details = "Designed, prototyped, and debugged microcontroller system designed to act as “assistant” via voice commands"
-        header = "Room Automation System"
+          src="/assets/Room_Automation.webp"
+          details = "Designed, prototyped, and debugged microcontroller system designed to act as “assistant” via voice commands"
+          header = "Room Automation System"
         ></portfolio-item>
         <portfolio-item 
-          img="/assets/LED_Infinity_Mirror.webm"
+          src="/assets/LED_Infinity_Mirror.webm"
+          src2="/assets/LED_Infinity_Mirror.mp4"
           details = "Hand-crafted an LED infinity mirror with an Arduino microcontroller and custom software for different LED patterns."
           header = "LED Infinity Mirror"
           github="https://github.com/Sean-Fuhrman/LED-Infinity-Mirror"
         ></portfolio-item>    
         <portfolio-item 
-          img="/assets/website_photo.webp"
+          src="/assets/website_photo.webp"
           details = "This website is done in pure HTML, CSS, and Javascript. It has gone through many revisions and is still a work in progress."
           header = "This Website!"
         ></portfolio-item>
         <portfolio-item 
-          img="/assets/DS3.png"
+          src="/assets/DS3.png"
           details = "In-progress: I am working with a team of students at <a href='https://www.ds3ucsd.com/'>DS3</a> to create a Shazam-like data science project that classifies music genre"
           header = "Data Science Student Society"
         ></portfolio-item>
