--- a/index.html
+++ b/index.html
@@ -47,29 +47,30 @@
       <div id="slider">
         <!-- requires 5 minimum -->
         <portfolio-item 
-          src="/assets/Falling_Aliens!!!.webp"
+          img="/assets/Falling_Aliens!!!.webp"
           details = "Created a 2D arcade-style video game using the Unity game engine and Javascript programming language."
           header = "Falling Aliens!!!"
         ></portfolio-item>
         <portfolio-item 
-          src="/assets/Room_Automation.webp"
+          img="/assets/Room_Automation.webp"
           details = "Designed, prototyped, and debugged microcontroller system designed to act as “assistant” via voice commands"
           header = "Room Automation System"
         ></portfolio-item>
         <portfolio-item 
           src="/assets/LED_Infinity_Mirror.webm"
           src2="/assets/LED_Infinity_Mirror.mp4"
+          img="/assets/LED_Infinity_Mirror.png"
           details = "Hand-crafted an LED infinity mirror with an Arduino microcontroller and custom software for different LED patterns."
           header = "LED Infinity Mirror"
           github="https://github.com/Sean-Fuhrman/LED-Infinity-Mirror"
         ></portfolio-item>    
         <portfolio-item 
-          src="/assets/website_photo.webp"
+          img="/assets/website_photo.webp"
           details = "This website is done in pure HTML, CSS, and Javascript. It has gone through many revisions and is still a work in progress."
           header = "This Website!"
         ></portfolio-item>
         <portfolio-item 
-          src="/assets/DS3.png"
+          img="/assets/DS3.png"
           details = "In-progress: I am working with a team of students at <a href='https://www.ds3ucsd.com/'>DS3</a> to create a Shazam-like data science project that classifies music genre"
           header = "Data Science Student Society"
         ></portfolio-item>
