Update links and font size of portfolio

--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
           img="/assets/website_photo.webp"
           details = "This website is done in pure HTML, CSS, and Javascript. It has gone through many revisions and is still a work in progress."
           header = "This Website!"
+          github="https://github.com/Sean-Fuhrman/seanfuhrman.com"
         ></portfolio-item>
         <portfolio-item 
           img="/assets/DS3.png"
-          details = "In-progress: I am working with a team of students at <a href='https://www.ds3ucsd.com/'>DS3</a> to create a Shazam-like data science project that classifies music genre"
+          details = "As part of the Data Science Student Society I created a music genre classification machine learning model trained on the Million Song Dataset. Acheived <b>99.6%</b> accuracy"
           header = "Data Science Student Society"
+          github="https://github.com/jasminelo2020/shazam2.0"
         ></portfolio-item>
 
       </div>
