--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <main>
     <noscript>
-      <p>Sorry, my webepage requires JavaScript to be enabled!</p>
+      <p>Sorry, my webpage requires JavaScript to be enabled!</p>
     </noscript>
   </main>
   <template id="homepage-tpl">
