--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!--TO-DO: ADD META DESCRIPTION-->
   <title>Home - Personal Website</title>
   <link rel="stylesheet" href="/global.css" media="screen" type="text/css">
-  <script src="js/main.js" type="module"></script>
+  <script src="main.js" type="module"></script>
   <!-- Zero md for loading markdown files-->
   <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
