--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--TO-DO: ADD META DESCRIPTION-->
+  <meta name="description" content="I'm a Computer Engineering major studying at University of California San Diego. I'm passionate about computert science, artificial intelligence, building fun projects, and learning new things">
   <title>Home - Personal Website</title>
   <link rel="stylesheet" href="/global.css" media="screen" type="text/css">
   <script src="main.js" type="module"></script>
@@ -26,9 +26,9 @@
           <hr id="top-line">
           <h1><strong style="font-size: 5rem;">Hi </strong><br> I'm  Sean Fuhrman</h1>
           <p>
-            I am a <strong>Computer Engineering</strong> major currently 
+            I'm a <strong>Computer Engineering</strong> major currently 
             studying at <strong>University of California San Diego</strong>.
-            I'm passionate about artificial intelligence, building fun projects, and learning new things.
+            I'm passionate about computer science, artificial intelligence, building fun projects, and learning new things.
           </p>
           <nav>
             <a id="resume-button" class="homepage-button" href="/Resume.pdf">Resume</a>
