--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
         <div id="blog-container">
           <h3>Posts</h3>
           <div id="blog-posts">
-            <a href="/blog/My-First-Blog-Post"><p id="title">My First Blog Post</p><p id=date>1/6/24</p></a>
+            <!-- <a href="/blog/My-First-Blog-Post"><p id="title">My First Blog Post</p><p id=date>1/6/24</p></a> -->
+            No Posts Yet, Coming Soon!
           </div>
         </div>
     </section>
@@ -146,7 +147,6 @@
         <a class="back-home-button" href="/blog">Back To Posts</a>
         <a class="back-home-button" href="/">Back Home</a>
       </header>
-      <main>
         <div id="blog-container">
           <zero-md>
             <template>
@@ -158,26 +158,6 @@
               </style>
           </zero-md>
         </div>
-        <div id="disqus_thread"></div>
-        <script>
-            /**
-            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-            /*
-            var disqus_config = function () {
-            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-            };
-            */
-            (function() { // DON'T EDIT BELOW THIS LINE
-            var d = document, s = d.createElement('script');
-            s.src = 'https://blog-4tforydolb.disqus.com/embed.js';
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-            })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-      </main>
     </section>
   </template>
 </body>
