--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           
           <nav>
             <a id="resume-button" class="homepage-button" href="/Resume.pdf">Resume</a>
+            <a id="publications-button" class="homepage-button" href="/publications">Publications</a>
             <a id="projects-button" class="homepage-button" href="/projects">Projects</a>
             <a id="blog-button" class="homepage-button" href="/blog">Blog</a>
             <a id="contact-button" class="homepage-button" href="/contact">Contact</a>
@@ -75,11 +76,17 @@
         github="https://github.com/jasminelo2020/shazam2.0"
       ></projects-item>
       <projects-item 
-        img="/assets/website_photo.webp"
-        details = "This website is done in pure HTML, CSS, and Javascript. It has gone through many revisions and is still a work in progress."
-        header = "This Website!"
-        github="https://github.com/Sean-Fuhrman/seanfuhrman.com"
+        img="/assets/fog_of_war_chess.gif"
+        details = "A reinforcement learning based fog of war chess bot. Leverages DeepQ learning along with self-play to learn to play chess. The bot uses a neural network to predict the best move to make."
+        header = "FogBot" 
+        github="https://github.com/Sean-Fuhrman/FogBot"
       ></projects-item>
+      <projects-item 
+      img="/assets/website_photo.webp"
+      details = "This website is done in pure HTML, CSS, and Javascript. It has gone through many revisions and is still a work in progress."
+      header = "This Website!"
+      github="https://github.com/Sean-Fuhrman/seanfuhrman.com"
+    ></projects-item>
       <projects-item 
         src="/assets/LED_Infinity_Mirror.webm"
         src2="/assets/LED_Infinity_Mirror.mp4"
@@ -158,7 +165,6 @@
       </header>
         <div id="blog-container">
           <zero-md>
-            <template>
               <!-- Define your own styles inside a `<style>` tag -->
               <style>
                 * {
@@ -175,6 +181,23 @@
           crossorigin="anonymous"
           async>
         </script>
+    </section>
+  </template>
+  <template id="publications-tpl">
+    <section id="publications">
+      <header>
+        <h2>Publications</h2>
+        <a class="back-home-button" href="/">Back Home</a>
+      </header>
+      <div id="publications-container">
+        <div id="publications-list">
+          <ul>
+            <li>
+              <p>W. Xu, V. Swaminathan, S. Pinge, <b>S. Fuhrman</b> and T. Rosing, "HyperMetric: Robust Hyperdimensional Computing on Error-prone Memories using Metric Learning," <i>2023 IEEE 41st International Conference on Computer Design (ICCD) </i>, Washington, DC, USA, 2023 pp. 243-246.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
   </template>
 </body>
