Updates to look better on mobile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div id="introduction-container">
             <img id="profile-pic" src="/assets/profile_pic.jpg" alt="Sean Fuhrman">
             <div id="text-section">
-              <h1><strong style="font-size: 5rem;">Hi </strong><br> I'm  Sean Fuhrman</h1>
+              <h1><strong>Hi </strong><br> I'm  Sean Fuhrman</h1>
             
               <p>
                 I'm a <strong>Computer Engineering</strong> major currently 
