--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <div id="blog-container">
           <h3>Posts</h3>
           <div id="blog-posts">
-            <a href="/blog/Reading-List"><p id="title">Reading List</p><p id=date>4/25/25</p></a>
+            <a href="/blog/Reading-List"><p id="title">Reading List</p><p id=date></p></a>
             <a href="/blog/When-AI-Wants-to-Survive"><p id="title">When AI Wants to Survive</p><p id=date>4/29/25</p></a>
           </div>
         </div>
