--- a/index.html
+++ b/index.html
@@ -230,7 +230,23 @@
         <div id="publications-list">
           <ul>
             <li>
-              <p>W. Xu, V. Swaminathan, S. Pinge, <b>S. Fuhrman</b> and T. Rosing, "HyperMetric: Robust Hyperdimensional Computing on Error-prone Memories using Metric Learning," <i>2023 IEEE 41st International Conference on Computer Design (ICCD) </i>, Washington, DC, USA, 2023 pp. 243-246.</p>
+              <p>
+                <b>S. Fuhrman</b>, O. Gungor and T. Rosing,<br>
+                "CND-IDS: Continual Novelty Detection for Intrusion Detection Systems,"<br>
+                <i>2025 62nd ACM/IEEE Design Automation Conference (DAC)</i>, pp. 1-7, 2025.<br>
+              </p>
+            </li>
+
+            <li>
+              <p>W. Xu, <b>S. Fuhrman</b>, K. Fan, S. Pinge, W.-C. Chen and T. Rosing, 
+                "HyperMetric: Efficient Hyperdimensional Computing With Metric Learning for Robust Edge Intelligence," 
+                <i>IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems</i>, IEEE, 2025.</p>
+            </li>
+            
+            <li>
+              <p>W. Xu, V. Swaminathan, S. Pinge, <b>S. Fuhrman</b> and T. Rosing, 
+                "HyperMetric: Robust Hyperdimensional Computing on Error-prone Memories using Metric Learning," 
+                <i>2023 IEEE 41st International Conference on Computer Design (ICCD)</i>, Washington, DC, USA, 2023 pp. 243-246.</p>
             </li>
           </ul>
         </div>
