Dynamically render blog post list

--- a/index.html
+++ b/index.html
@@ -189,10 +189,9 @@
         <div id="blog-container">
           <div id="blog-posts">
             <h3>Posts</h3>
-            <a href="/blog/When-AI-Wants-To-Survive"><p id="title">When AI Wants to Survive</p><p id=date>4/29/25</p></a>
+            <div id="blog-post-list"></div>
             <h4>Ongoing</h4>
-            <a href="/blog/Reading-List"><p id="title">Reading List</p><p id=date></p></a>
-            <a href="/blog/Poetry"><p id="title">Poetry</p></a>
+            <div id="blog-post-ongoing-list"></div>
           </div>
         </div>
     </section>
